2010-02-05  davidded

	* [r1206] src/chan_sccp.c, src/sccp_device.c, src/sccp_mwi.c: my
	  latest changes

2010-02-05  ddegroot

	* [r1205] doc/new_features.doc, src/chan_sccp.h, src/sccp_config.h,
	  src/sccp_protocol.h: Added Structure Comments to
	  sccp_protocol.h,chan_sccp.h and sccp_config.h Fixed format issue
	  in new_features.doc for <name>, <option1> and <option2>

2010-02-04  ddegroot

	* [r1204] conf/sccp.conf, doc/main.doc, doc/new_features.doc:
	  Updated comments and documentation

2010-02-03  ddegroot

	* [r1203] conf/sccp.conf: Updated comments in the sccp.conf file to
	  inform users about hotlines and feature buttons

	* [r1202] doc/new_features.doc: Fixed documentation for call
	  forward in new_features

	* [r1201] doc/new_features.doc: Updates the softkeys documentation
	  section to include sccp.conf example for softkeys

	* [r1200] doc/main.doc, doc/new_features.doc[CPY],
	  doc/softkeys.doc[DEL]: Changed softkeys.doc to new_features.doc
	  Updated new_features.doc to include information about feature
	  buttons and hotlines

2010-02-03  marcelloceschia

	* [r1199] conf/sccp_simple.conf: add description

2010-02-03  davidded

	* [r1198] src/sccp_pbx.c: deadlock fix attempt

2010-02-02  davidded

	* [r1197] src/sccp_actions.c, src/sccp_mwi.c: fixed deadlock

2010-02-02  marcelloceschia

	* [r1196] src/sccp_protocol.h: number of available buttons in
	  ButtonTemplateReqMessage

2010-02-02  davidded

	* [r1195] src/sccp_actions.c, src/sccp_device.c: cleaned up device
	  registration procedure

2010-02-01  marcelloceschia

	* [r1194] src/sccp_channel.c: do not lock channel on answer, see
	  core locks

	* [r1193] src/sccp_channel.c: do not lock channel on answer, see
	  core locks

	* [r1192] configure.ac:

2010-02-01  davidded

	* [r1191] src/sccp_actions.c: sleep reintroduced

	* [r1190] src/chan_sccp.c, src/sccp_actions.c, src/sccp_features.c,
	  src/sccp_hint.c: fixing

2010-01-31  davidded
